cmake_minimum_required(VERSION 3.30)
project(cmu_15462)

set(CMAKE_CXX_STANDARD 17)

include_directories(deps/)
include_directories(nest-libs/macos/freetype/include)
include_directories(nest-libs/macos/freetype/include/freetype)
include_directories(nest-libs/macos/freetype/include/freetype/config)
include_directories(nest-libs/macos/freetype/include/freetype/internal)
include_directories(nest-libs/macos/freetype/include/freetype/internal/services)
include_directories(nest-libs/macos/glm/include)
include_directories(nest-libs/macos/glm/include/glm)
include_directories(nest-libs/macos/glm/include/glm/detail)
include_directories(nest-libs/macos/glm/include/glm/ext)
include_directories(nest-libs/macos/glm/include/glm/gtc)
include_directories(nest-libs/macos/glm/include/glm/gtx)
include_directories(nest-libs/macos/glm/include/glm/simd)
include_directories(nest-libs/macos/harfbuzz/include)
include_directories(nest-libs/macos/libogg/include)
include_directories(nest-libs/macos/libogg/include/ogg)
include_directories(nest-libs/macos/libopus/include)
include_directories(nest-libs/macos/libopusenc/include)
include_directories(nest-libs/macos/libpng/include)
include_directories(nest-libs/macos/opusfile/include)
include_directories(nest-libs/macos/SDL2/include)
include_directories(nest-libs/macos/SDL2/include/SDL2)
include_directories(nest-libs/macos/zlib/include)
include_directories(src)
include_directories(src/geometry)
include_directories(src/gui)
include_directories(src/lib)
include_directories(src/pathtracer)
include_directories(src/platform)
include_directories(src/rasterizer)
include_directories(src/scene)
include_directories(src/util)

add_executable(cmu_15462
    deps/glad/glad.cpp
    deps/glad/glad.h
    deps/glad/khrplatform.h
    deps/imgui/imconfig.h
    deps/imgui/imgui.cpp
    deps/imgui/imgui.h
    deps/imgui/imgui_custom.h
    deps/imgui/imgui_demo.cpp
    deps/imgui/imgui_draw.cpp
    deps/imgui/imgui_impl_opengl3.cpp
    deps/imgui/imgui_impl_opengl3.h
    deps/imgui/imgui_impl_opengl3_loader.h
    deps/imgui/imgui_impl_sdl.cpp
    deps/imgui/imgui_impl_sdl.h
    deps/imgui/imgui_internal.h
    deps/imgui/imgui_tables.cpp
    deps/imgui/imgui_widgets.cpp
    deps/imgui/imstb_rectpack.h
    deps/imgui/imstb_textedit.h
    deps/imgui/imstb_truetype.h
    deps/nfd/nfd.h
    deps/nfd/nfd_cocoa.m
    deps/nfd/nfd_common.c
    deps/nfd/nfd_common.h
    deps/nfd/nfd_gtk.c
    deps/nfd/nfd_win.cpp
    deps/sejp/example.cpp
    deps/sejp/Makefile
    deps/sejp/README.md
    deps/sejp/sejp-test.cpp
    deps/sejp/sejp.cpp
    deps/sejp/sejp.hpp
    deps/sf_libs/CLI11.hpp
    deps/sf_libs/sf_libs.cpp
    deps/sf_libs/stb_image.h
    deps/sf_libs/stb_image_write.h
    deps/sf_libs/stb_perlin.h
    deps/sf_libs/tinyexr.h
    nest-libs/macos/freetype/dist/README-freetype.txt
    nest-libs/macos/freetype/include/freetype/config/ftconfig.h
    nest-libs/macos/freetype/include/freetype/config/ftheader.h
    nest-libs/macos/freetype/include/freetype/config/ftmodule.h
    nest-libs/macos/freetype/include/freetype/config/ftoption.h
    nest-libs/macos/freetype/include/freetype/config/ftoption.h.before
    nest-libs/macos/freetype/include/freetype/config/ftstdlib.h
    nest-libs/macos/freetype/include/freetype/config/integer-types.h
    nest-libs/macos/freetype/include/freetype/config/mac-support.h
    nest-libs/macos/freetype/include/freetype/config/public-macros.h
    nest-libs/macos/freetype/include/freetype/internal/services/svbdf.h
    nest-libs/macos/freetype/include/freetype/internal/services/svcfftl.h
    nest-libs/macos/freetype/include/freetype/internal/services/svcid.h
    nest-libs/macos/freetype/include/freetype/internal/services/svfntfmt.h
    nest-libs/macos/freetype/include/freetype/internal/services/svgldict.h
    nest-libs/macos/freetype/include/freetype/internal/services/svgxval.h
    nest-libs/macos/freetype/include/freetype/internal/services/svkern.h
    nest-libs/macos/freetype/include/freetype/internal/services/svmetric.h
    nest-libs/macos/freetype/include/freetype/internal/services/svmm.h
    nest-libs/macos/freetype/include/freetype/internal/services/svotval.h
    nest-libs/macos/freetype/include/freetype/internal/services/svpfr.h
    nest-libs/macos/freetype/include/freetype/internal/services/svpostnm.h
    nest-libs/macos/freetype/include/freetype/internal/services/svprop.h
    nest-libs/macos/freetype/include/freetype/internal/services/svpscmap.h
    nest-libs/macos/freetype/include/freetype/internal/services/svpsinfo.h
    nest-libs/macos/freetype/include/freetype/internal/services/svsfnt.h
    nest-libs/macos/freetype/include/freetype/internal/services/svttcmap.h
    nest-libs/macos/freetype/include/freetype/internal/services/svtteng.h
    nest-libs/macos/freetype/include/freetype/internal/services/svttglyf.h
    nest-libs/macos/freetype/include/freetype/internal/services/svwinfnt.h
    nest-libs/macos/freetype/include/freetype/internal/autohint.h
    nest-libs/macos/freetype/include/freetype/internal/cffotypes.h
    nest-libs/macos/freetype/include/freetype/internal/cfftypes.h
    nest-libs/macos/freetype/include/freetype/internal/compiler-macros.h
    nest-libs/macos/freetype/include/freetype/internal/ftcalc.h
    nest-libs/macos/freetype/include/freetype/internal/ftdebug.h
    nest-libs/macos/freetype/include/freetype/internal/ftdrv.h
    nest-libs/macos/freetype/include/freetype/internal/ftgloadr.h
    nest-libs/macos/freetype/include/freetype/internal/fthash.h
    nest-libs/macos/freetype/include/freetype/internal/ftmemory.h
    nest-libs/macos/freetype/include/freetype/internal/ftobjs.h
    nest-libs/macos/freetype/include/freetype/internal/ftpsprop.h
    nest-libs/macos/freetype/include/freetype/internal/ftrfork.h
    nest-libs/macos/freetype/include/freetype/internal/ftserv.h
    nest-libs/macos/freetype/include/freetype/internal/ftstream.h
    nest-libs/macos/freetype/include/freetype/internal/fttrace.h
    nest-libs/macos/freetype/include/freetype/internal/ftvalid.h
    nest-libs/macos/freetype/include/freetype/internal/psaux.h
    nest-libs/macos/freetype/include/freetype/internal/pshints.h
    nest-libs/macos/freetype/include/freetype/internal/sfnt.h
    nest-libs/macos/freetype/include/freetype/internal/svginterface.h
    nest-libs/macos/freetype/include/freetype/internal/t1types.h
    nest-libs/macos/freetype/include/freetype/internal/tttypes.h
    nest-libs/macos/freetype/include/freetype/internal/wofftypes.h
    nest-libs/macos/freetype/include/freetype/freetype.h
    nest-libs/macos/freetype/include/freetype/ftadvanc.h
    nest-libs/macos/freetype/include/freetype/ftbbox.h
    nest-libs/macos/freetype/include/freetype/ftbdf.h
    nest-libs/macos/freetype/include/freetype/ftbitmap.h
    nest-libs/macos/freetype/include/freetype/ftbzip2.h
    nest-libs/macos/freetype/include/freetype/ftcache.h
    nest-libs/macos/freetype/include/freetype/ftchapters.h
    nest-libs/macos/freetype/include/freetype/ftcid.h
    nest-libs/macos/freetype/include/freetype/ftcolor.h
    nest-libs/macos/freetype/include/freetype/ftdriver.h
    nest-libs/macos/freetype/include/freetype/fterrdef.h
    nest-libs/macos/freetype/include/freetype/fterrors.h
    nest-libs/macos/freetype/include/freetype/ftfntfmt.h
    nest-libs/macos/freetype/include/freetype/ftgasp.h
    nest-libs/macos/freetype/include/freetype/ftglyph.h
    nest-libs/macos/freetype/include/freetype/ftgxval.h
    nest-libs/macos/freetype/include/freetype/ftgzip.h
    nest-libs/macos/freetype/include/freetype/ftimage.h
    nest-libs/macos/freetype/include/freetype/ftincrem.h
    nest-libs/macos/freetype/include/freetype/ftlcdfil.h
    nest-libs/macos/freetype/include/freetype/ftlist.h
    nest-libs/macos/freetype/include/freetype/ftlogging.h
    nest-libs/macos/freetype/include/freetype/ftlzw.h
    nest-libs/macos/freetype/include/freetype/ftmac.h
    nest-libs/macos/freetype/include/freetype/ftmm.h
    nest-libs/macos/freetype/include/freetype/ftmodapi.h
    nest-libs/macos/freetype/include/freetype/ftmoderr.h
    nest-libs/macos/freetype/include/freetype/ftotval.h
    nest-libs/macos/freetype/include/freetype/ftoutln.h
    nest-libs/macos/freetype/include/freetype/ftparams.h
    nest-libs/macos/freetype/include/freetype/ftpfr.h
    nest-libs/macos/freetype/include/freetype/ftrender.h
    nest-libs/macos/freetype/include/freetype/ftsizes.h
    nest-libs/macos/freetype/include/freetype/ftsnames.h
    nest-libs/macos/freetype/include/freetype/ftstroke.h
    nest-libs/macos/freetype/include/freetype/ftsynth.h
    nest-libs/macos/freetype/include/freetype/ftsystem.h
    nest-libs/macos/freetype/include/freetype/fttrigon.h
    nest-libs/macos/freetype/include/freetype/fttypes.h
    nest-libs/macos/freetype/include/freetype/ftwinfnt.h
    nest-libs/macos/freetype/include/freetype/otsvg.h
    nest-libs/macos/freetype/include/freetype/t1tables.h
    nest-libs/macos/freetype/include/freetype/ttnameid.h
    nest-libs/macos/freetype/include/freetype/tttables.h
    nest-libs/macos/freetype/include/freetype/tttags.h
    nest-libs/macos/freetype/include/ft2build.h
    nest-libs/macos/freetype/lib/libfreetype.a
    nest-libs/macos/glm/dist/README-glm.txt
    nest-libs/macos/glm/include/glm/detail/_features.hpp
    nest-libs/macos/glm/include/glm/detail/_fixes.hpp
    nest-libs/macos/glm/include/glm/detail/_noise.hpp
    nest-libs/macos/glm/include/glm/detail/_swizzle.hpp
    nest-libs/macos/glm/include/glm/detail/_swizzle_func.hpp
    nest-libs/macos/glm/include/glm/detail/_vectorize.hpp
    nest-libs/macos/glm/include/glm/detail/compute_common.hpp
    nest-libs/macos/glm/include/glm/detail/compute_vector_relational.hpp
    nest-libs/macos/glm/include/glm/detail/func_common.inl
    nest-libs/macos/glm/include/glm/detail/func_common_simd.inl
    nest-libs/macos/glm/include/glm/detail/func_exponential.inl
    nest-libs/macos/glm/include/glm/detail/func_exponential_simd.inl
    nest-libs/macos/glm/include/glm/detail/func_geometric.inl
    nest-libs/macos/glm/include/glm/detail/func_geometric_simd.inl
    nest-libs/macos/glm/include/glm/detail/func_integer.inl
    nest-libs/macos/glm/include/glm/detail/func_integer_simd.inl
    nest-libs/macos/glm/include/glm/detail/func_matrix.inl
    nest-libs/macos/glm/include/glm/detail/func_matrix_simd.inl
    nest-libs/macos/glm/include/glm/detail/func_packing.inl
    nest-libs/macos/glm/include/glm/detail/func_packing_simd.inl
    nest-libs/macos/glm/include/glm/detail/func_trigonometric.inl
    nest-libs/macos/glm/include/glm/detail/func_trigonometric_simd.inl
    nest-libs/macos/glm/include/glm/detail/func_vector_relational.inl
    nest-libs/macos/glm/include/glm/detail/func_vector_relational_simd.inl
    nest-libs/macos/glm/include/glm/detail/glm.cpp
    nest-libs/macos/glm/include/glm/detail/qualifier.hpp
    nest-libs/macos/glm/include/glm/detail/setup.hpp
    nest-libs/macos/glm/include/glm/detail/type_float.hpp
    nest-libs/macos/glm/include/glm/detail/type_half.hpp
    nest-libs/macos/glm/include/glm/detail/type_half.inl
    nest-libs/macos/glm/include/glm/detail/type_mat2x2.hpp
    nest-libs/macos/glm/include/glm/detail/type_mat2x2.inl
    nest-libs/macos/glm/include/glm/detail/type_mat2x3.hpp
    nest-libs/macos/glm/include/glm/detail/type_mat2x3.inl
    nest-libs/macos/glm/include/glm/detail/type_mat2x4.hpp
    nest-libs/macos/glm/include/glm/detail/type_mat2x4.inl
    nest-libs/macos/glm/include/glm/detail/type_mat3x2.hpp
    nest-libs/macos/glm/include/glm/detail/type_mat3x2.inl
    nest-libs/macos/glm/include/glm/detail/type_mat3x3.hpp
    nest-libs/macos/glm/include/glm/detail/type_mat3x3.inl
    nest-libs/macos/glm/include/glm/detail/type_mat3x4.hpp
    nest-libs/macos/glm/include/glm/detail/type_mat3x4.inl
    nest-libs/macos/glm/include/glm/detail/type_mat4x2.hpp
    nest-libs/macos/glm/include/glm/detail/type_mat4x2.inl
    nest-libs/macos/glm/include/glm/detail/type_mat4x3.hpp
    nest-libs/macos/glm/include/glm/detail/type_mat4x3.inl
    nest-libs/macos/glm/include/glm/detail/type_mat4x4.hpp
    nest-libs/macos/glm/include/glm/detail/type_mat4x4.inl
    nest-libs/macos/glm/include/glm/detail/type_mat4x4_simd.inl
    nest-libs/macos/glm/include/glm/detail/type_quat.hpp
    nest-libs/macos/glm/include/glm/detail/type_quat.inl
    nest-libs/macos/glm/include/glm/detail/type_quat_simd.inl
    nest-libs/macos/glm/include/glm/detail/type_vec1.hpp
    nest-libs/macos/glm/include/glm/detail/type_vec1.inl
    nest-libs/macos/glm/include/glm/detail/type_vec2.hpp
    nest-libs/macos/glm/include/glm/detail/type_vec2.inl
    nest-libs/macos/glm/include/glm/detail/type_vec3.hpp
    nest-libs/macos/glm/include/glm/detail/type_vec3.inl
    nest-libs/macos/glm/include/glm/detail/type_vec4.hpp
    nest-libs/macos/glm/include/glm/detail/type_vec4.inl
    nest-libs/macos/glm/include/glm/detail/type_vec4_simd.inl
    nest-libs/macos/glm/include/glm/ext/matrix_clip_space.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_clip_space.inl
    nest-libs/macos/glm/include/glm/ext/matrix_common.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_common.inl
    nest-libs/macos/glm/include/glm/ext/matrix_double2x2.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_double2x2_precision.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_double2x3.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_double2x3_precision.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_double2x4.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_double2x4_precision.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_double3x2.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_double3x2_precision.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_double3x3.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_double3x3_precision.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_double3x4.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_double3x4_precision.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_double4x2.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_double4x2_precision.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_double4x3.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_double4x3_precision.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_double4x4.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_double4x4_precision.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_float2x2.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_float2x2_precision.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_float2x3.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_float2x3_precision.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_float2x4.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_float2x4_precision.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_float3x2.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_float3x2_precision.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_float3x3.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_float3x3_precision.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_float3x4.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_float3x4_precision.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_float4x2.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_float4x2_precision.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_float4x3.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_float4x3_precision.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_float4x4.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_float4x4_precision.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_int2x2.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_int2x2_sized.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_int2x3.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_int2x3_sized.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_int2x4.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_int2x4_sized.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_int3x2.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_int3x2_sized.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_int3x3.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_int3x3_sized.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_int3x4.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_int3x4_sized.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_int4x2.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_int4x2_sized.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_int4x3.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_int4x3_sized.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_int4x4.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_int4x4_sized.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_projection.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_projection.inl
    nest-libs/macos/glm/include/glm/ext/matrix_relational.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_relational.inl
    nest-libs/macos/glm/include/glm/ext/matrix_transform.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_transform.inl
    nest-libs/macos/glm/include/glm/ext/matrix_uint2x2.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_uint2x2_sized.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_uint2x3.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_uint2x3_sized.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_uint2x4.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_uint2x4_sized.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_uint3x2.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_uint3x2_sized.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_uint3x3.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_uint3x3_sized.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_uint3x4.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_uint3x4_sized.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_uint4x2.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_uint4x2_sized.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_uint4x3.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_uint4x3_sized.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_uint4x4.hpp
    nest-libs/macos/glm/include/glm/ext/matrix_uint4x4_sized.hpp
    nest-libs/macos/glm/include/glm/ext/quaternion_common.hpp
    nest-libs/macos/glm/include/glm/ext/quaternion_common.inl
    nest-libs/macos/glm/include/glm/ext/quaternion_common_simd.inl
    nest-libs/macos/glm/include/glm/ext/quaternion_double.hpp
    nest-libs/macos/glm/include/glm/ext/quaternion_double_precision.hpp
    nest-libs/macos/glm/include/glm/ext/quaternion_exponential.hpp
    nest-libs/macos/glm/include/glm/ext/quaternion_exponential.inl
    nest-libs/macos/glm/include/glm/ext/quaternion_float.hpp
    nest-libs/macos/glm/include/glm/ext/quaternion_float_precision.hpp
    nest-libs/macos/glm/include/glm/ext/quaternion_geometric.hpp
    nest-libs/macos/glm/include/glm/ext/quaternion_geometric.inl
    nest-libs/macos/glm/include/glm/ext/quaternion_relational.hpp
    nest-libs/macos/glm/include/glm/ext/quaternion_relational.inl
    nest-libs/macos/glm/include/glm/ext/quaternion_transform.hpp
    nest-libs/macos/glm/include/glm/ext/quaternion_transform.inl
    nest-libs/macos/glm/include/glm/ext/quaternion_trigonometric.hpp
    nest-libs/macos/glm/include/glm/ext/quaternion_trigonometric.inl
    nest-libs/macos/glm/include/glm/ext/scalar_common.hpp
    nest-libs/macos/glm/include/glm/ext/scalar_common.inl
    nest-libs/macos/glm/include/glm/ext/scalar_constants.hpp
    nest-libs/macos/glm/include/glm/ext/scalar_constants.inl
    nest-libs/macos/glm/include/glm/ext/scalar_int_sized.hpp
    nest-libs/macos/glm/include/glm/ext/scalar_integer.hpp
    nest-libs/macos/glm/include/glm/ext/scalar_integer.inl
    nest-libs/macos/glm/include/glm/ext/scalar_packing.hpp
    nest-libs/macos/glm/include/glm/ext/scalar_packing.inl
    nest-libs/macos/glm/include/glm/ext/scalar_relational.hpp
    nest-libs/macos/glm/include/glm/ext/scalar_relational.inl
    nest-libs/macos/glm/include/glm/ext/scalar_uint_sized.hpp
    nest-libs/macos/glm/include/glm/ext/scalar_ulp.hpp
    nest-libs/macos/glm/include/glm/ext/scalar_ulp.inl
    nest-libs/macos/glm/include/glm/ext/vector_bool1.hpp
    nest-libs/macos/glm/include/glm/ext/vector_bool1_precision.hpp
    nest-libs/macos/glm/include/glm/ext/vector_bool2.hpp
    nest-libs/macos/glm/include/glm/ext/vector_bool2_precision.hpp
    nest-libs/macos/glm/include/glm/ext/vector_bool3.hpp
    nest-libs/macos/glm/include/glm/ext/vector_bool3_precision.hpp
    nest-libs/macos/glm/include/glm/ext/vector_bool4.hpp
    nest-libs/macos/glm/include/glm/ext/vector_bool4_precision.hpp
    nest-libs/macos/glm/include/glm/ext/vector_common.hpp
    nest-libs/macos/glm/include/glm/ext/vector_common.inl
    nest-libs/macos/glm/include/glm/ext/vector_double1.hpp
    nest-libs/macos/glm/include/glm/ext/vector_double1_precision.hpp
    nest-libs/macos/glm/include/glm/ext/vector_double2.hpp
    nest-libs/macos/glm/include/glm/ext/vector_double2_precision.hpp
    nest-libs/macos/glm/include/glm/ext/vector_double3.hpp
    nest-libs/macos/glm/include/glm/ext/vector_double3_precision.hpp
    nest-libs/macos/glm/include/glm/ext/vector_double4.hpp
    nest-libs/macos/glm/include/glm/ext/vector_double4_precision.hpp
    nest-libs/macos/glm/include/glm/ext/vector_float1.hpp
    nest-libs/macos/glm/include/glm/ext/vector_float1_precision.hpp
    nest-libs/macos/glm/include/glm/ext/vector_float2.hpp
    nest-libs/macos/glm/include/glm/ext/vector_float2_precision.hpp
    nest-libs/macos/glm/include/glm/ext/vector_float3.hpp
    nest-libs/macos/glm/include/glm/ext/vector_float3_precision.hpp
    nest-libs/macos/glm/include/glm/ext/vector_float4.hpp
    nest-libs/macos/glm/include/glm/ext/vector_float4_precision.hpp
    nest-libs/macos/glm/include/glm/ext/vector_int1.hpp
    nest-libs/macos/glm/include/glm/ext/vector_int1_sized.hpp
    nest-libs/macos/glm/include/glm/ext/vector_int2.hpp
    nest-libs/macos/glm/include/glm/ext/vector_int2_sized.hpp
    nest-libs/macos/glm/include/glm/ext/vector_int3.hpp
    nest-libs/macos/glm/include/glm/ext/vector_int3_sized.hpp
    nest-libs/macos/glm/include/glm/ext/vector_int4.hpp
    nest-libs/macos/glm/include/glm/ext/vector_int4_sized.hpp
    nest-libs/macos/glm/include/glm/ext/vector_integer.hpp
    nest-libs/macos/glm/include/glm/ext/vector_integer.inl
    nest-libs/macos/glm/include/glm/ext/vector_packing.hpp
    nest-libs/macos/glm/include/glm/ext/vector_packing.inl
    nest-libs/macos/glm/include/glm/ext/vector_relational.hpp
    nest-libs/macos/glm/include/glm/ext/vector_relational.inl
    nest-libs/macos/glm/include/glm/ext/vector_uint1.hpp
    nest-libs/macos/glm/include/glm/ext/vector_uint1_sized.hpp
    nest-libs/macos/glm/include/glm/ext/vector_uint2.hpp
    nest-libs/macos/glm/include/glm/ext/vector_uint2_sized.hpp
    nest-libs/macos/glm/include/glm/ext/vector_uint3.hpp
    nest-libs/macos/glm/include/glm/ext/vector_uint3_sized.hpp
    nest-libs/macos/glm/include/glm/ext/vector_uint4.hpp
    nest-libs/macos/glm/include/glm/ext/vector_uint4_sized.hpp
    nest-libs/macos/glm/include/glm/ext/vector_ulp.hpp
    nest-libs/macos/glm/include/glm/ext/vector_ulp.inl
    nest-libs/macos/glm/include/glm/gtc/bitfield.hpp
    nest-libs/macos/glm/include/glm/gtc/bitfield.inl
    nest-libs/macos/glm/include/glm/gtc/color_space.hpp
    nest-libs/macos/glm/include/glm/gtc/color_space.inl
    nest-libs/macos/glm/include/glm/gtc/constants.hpp
    nest-libs/macos/glm/include/glm/gtc/constants.inl
    nest-libs/macos/glm/include/glm/gtc/epsilon.hpp
    nest-libs/macos/glm/include/glm/gtc/epsilon.inl
    nest-libs/macos/glm/include/glm/gtc/integer.hpp
    nest-libs/macos/glm/include/glm/gtc/integer.inl
    nest-libs/macos/glm/include/glm/gtc/matrix_access.hpp
    nest-libs/macos/glm/include/glm/gtc/matrix_access.inl
    nest-libs/macos/glm/include/glm/gtc/matrix_integer.hpp
    nest-libs/macos/glm/include/glm/gtc/matrix_inverse.hpp
    nest-libs/macos/glm/include/glm/gtc/matrix_inverse.inl
    nest-libs/macos/glm/include/glm/gtc/matrix_transform.hpp
    nest-libs/macos/glm/include/glm/gtc/matrix_transform.inl
    nest-libs/macos/glm/include/glm/gtc/noise.hpp
    nest-libs/macos/glm/include/glm/gtc/noise.inl
    nest-libs/macos/glm/include/glm/gtc/packing.hpp
    nest-libs/macos/glm/include/glm/gtc/packing.inl
    nest-libs/macos/glm/include/glm/gtc/quaternion.hpp
    nest-libs/macos/glm/include/glm/gtc/quaternion.inl
    nest-libs/macos/glm/include/glm/gtc/quaternion_simd.inl
    nest-libs/macos/glm/include/glm/gtc/random.hpp
    nest-libs/macos/glm/include/glm/gtc/random.inl
    nest-libs/macos/glm/include/glm/gtc/reciprocal.hpp
    nest-libs/macos/glm/include/glm/gtc/reciprocal.inl
    nest-libs/macos/glm/include/glm/gtc/round.hpp
    nest-libs/macos/glm/include/glm/gtc/round.inl
    nest-libs/macos/glm/include/glm/gtc/type_aligned.hpp
    nest-libs/macos/glm/include/glm/gtc/type_precision.hpp
    nest-libs/macos/glm/include/glm/gtc/type_precision.inl
    nest-libs/macos/glm/include/glm/gtc/type_ptr.hpp
    nest-libs/macos/glm/include/glm/gtc/type_ptr.inl
    nest-libs/macos/glm/include/glm/gtc/ulp.hpp
    nest-libs/macos/glm/include/glm/gtc/ulp.inl
    nest-libs/macos/glm/include/glm/gtc/vec1.hpp
    nest-libs/macos/glm/include/glm/gtx/associated_min_max.hpp
    nest-libs/macos/glm/include/glm/gtx/associated_min_max.inl
    nest-libs/macos/glm/include/glm/gtx/bit.hpp
    nest-libs/macos/glm/include/glm/gtx/bit.inl
    nest-libs/macos/glm/include/glm/gtx/closest_point.hpp
    nest-libs/macos/glm/include/glm/gtx/closest_point.inl
    nest-libs/macos/glm/include/glm/gtx/color_encoding.hpp
    nest-libs/macos/glm/include/glm/gtx/color_encoding.inl
    nest-libs/macos/glm/include/glm/gtx/color_space.hpp
    nest-libs/macos/glm/include/glm/gtx/color_space.inl
    nest-libs/macos/glm/include/glm/gtx/color_space_YCoCg.hpp
    nest-libs/macos/glm/include/glm/gtx/color_space_YCoCg.inl
    nest-libs/macos/glm/include/glm/gtx/common.hpp
    nest-libs/macos/glm/include/glm/gtx/common.inl
    nest-libs/macos/glm/include/glm/gtx/compatibility.hpp
    nest-libs/macos/glm/include/glm/gtx/compatibility.inl
    nest-libs/macos/glm/include/glm/gtx/component_wise.hpp
    nest-libs/macos/glm/include/glm/gtx/component_wise.inl
    nest-libs/macos/glm/include/glm/gtx/dual_quaternion.hpp
    nest-libs/macos/glm/include/glm/gtx/dual_quaternion.inl
    nest-libs/macos/glm/include/glm/gtx/easing.hpp
    nest-libs/macos/glm/include/glm/gtx/easing.inl
    nest-libs/macos/glm/include/glm/gtx/euler_angles.hpp
    nest-libs/macos/glm/include/glm/gtx/euler_angles.inl
    nest-libs/macos/glm/include/glm/gtx/extend.hpp
    nest-libs/macos/glm/include/glm/gtx/extend.inl
    nest-libs/macos/glm/include/glm/gtx/extended_min_max.hpp
    nest-libs/macos/glm/include/glm/gtx/extended_min_max.inl
    nest-libs/macos/glm/include/glm/gtx/exterior_product.hpp
    nest-libs/macos/glm/include/glm/gtx/exterior_product.inl
    nest-libs/macos/glm/include/glm/gtx/fast_exponential.hpp
    nest-libs/macos/glm/include/glm/gtx/fast_exponential.inl
    nest-libs/macos/glm/include/glm/gtx/fast_square_root.hpp
    nest-libs/macos/glm/include/glm/gtx/fast_square_root.inl
    nest-libs/macos/glm/include/glm/gtx/fast_trigonometry.hpp
    nest-libs/macos/glm/include/glm/gtx/fast_trigonometry.inl
    nest-libs/macos/glm/include/glm/gtx/float_notmalize.inl
    nest-libs/macos/glm/include/glm/gtx/functions.hpp
    nest-libs/macos/glm/include/glm/gtx/functions.inl
    nest-libs/macos/glm/include/glm/gtx/gradient_paint.hpp
    nest-libs/macos/glm/include/glm/gtx/gradient_paint.inl
    nest-libs/macos/glm/include/glm/gtx/handed_coordinate_space.hpp
    nest-libs/macos/glm/include/glm/gtx/handed_coordinate_space.inl
    nest-libs/macos/glm/include/glm/gtx/hash.hpp
    nest-libs/macos/glm/include/glm/gtx/hash.inl
    nest-libs/macos/glm/include/glm/gtx/integer.hpp
    nest-libs/macos/glm/include/glm/gtx/integer.inl
    nest-libs/macos/glm/include/glm/gtx/intersect.hpp
    nest-libs/macos/glm/include/glm/gtx/intersect.inl
    nest-libs/macos/glm/include/glm/gtx/io.hpp
    nest-libs/macos/glm/include/glm/gtx/io.inl
    nest-libs/macos/glm/include/glm/gtx/log_base.hpp
    nest-libs/macos/glm/include/glm/gtx/log_base.inl
    nest-libs/macos/glm/include/glm/gtx/matrix_cross_product.hpp
    nest-libs/macos/glm/include/glm/gtx/matrix_cross_product.inl
    nest-libs/macos/glm/include/glm/gtx/matrix_decompose.hpp
    nest-libs/macos/glm/include/glm/gtx/matrix_decompose.inl
    nest-libs/macos/glm/include/glm/gtx/matrix_factorisation.hpp
    nest-libs/macos/glm/include/glm/gtx/matrix_factorisation.inl
    nest-libs/macos/glm/include/glm/gtx/matrix_interpolation.hpp
    nest-libs/macos/glm/include/glm/gtx/matrix_interpolation.inl
    nest-libs/macos/glm/include/glm/gtx/matrix_major_storage.hpp
    nest-libs/macos/glm/include/glm/gtx/matrix_major_storage.inl
    nest-libs/macos/glm/include/glm/gtx/matrix_operation.hpp
    nest-libs/macos/glm/include/glm/gtx/matrix_operation.inl
    nest-libs/macos/glm/include/glm/gtx/matrix_query.hpp
    nest-libs/macos/glm/include/glm/gtx/matrix_query.inl
    nest-libs/macos/glm/include/glm/gtx/matrix_transform_2d.hpp
    nest-libs/macos/glm/include/glm/gtx/matrix_transform_2d.inl
    nest-libs/macos/glm/include/glm/gtx/mixed_product.hpp
    nest-libs/macos/glm/include/glm/gtx/mixed_product.inl
    nest-libs/macos/glm/include/glm/gtx/norm.hpp
    nest-libs/macos/glm/include/glm/gtx/norm.inl
    nest-libs/macos/glm/include/glm/gtx/normal.hpp
    nest-libs/macos/glm/include/glm/gtx/normal.inl
    nest-libs/macos/glm/include/glm/gtx/normalize_dot.hpp
    nest-libs/macos/glm/include/glm/gtx/normalize_dot.inl
    nest-libs/macos/glm/include/glm/gtx/number_precision.hpp
    nest-libs/macos/glm/include/glm/gtx/number_precision.inl
    nest-libs/macos/glm/include/glm/gtx/optimum_pow.hpp
    nest-libs/macos/glm/include/glm/gtx/optimum_pow.inl
    nest-libs/macos/glm/include/glm/gtx/orthonormalize.hpp
    nest-libs/macos/glm/include/glm/gtx/orthonormalize.inl
    nest-libs/macos/glm/include/glm/gtx/perpendicular.hpp
    nest-libs/macos/glm/include/glm/gtx/perpendicular.inl
    nest-libs/macos/glm/include/glm/gtx/polar_coordinates.hpp
    nest-libs/macos/glm/include/glm/gtx/polar_coordinates.inl
    nest-libs/macos/glm/include/glm/gtx/projection.hpp
    nest-libs/macos/glm/include/glm/gtx/projection.inl
    nest-libs/macos/glm/include/glm/gtx/quaternion.hpp
    nest-libs/macos/glm/include/glm/gtx/quaternion.inl
    nest-libs/macos/glm/include/glm/gtx/range.hpp
    nest-libs/macos/glm/include/glm/gtx/raw_data.hpp
    nest-libs/macos/glm/include/glm/gtx/raw_data.inl
    nest-libs/macos/glm/include/glm/gtx/rotate_normalized_axis.hpp
    nest-libs/macos/glm/include/glm/gtx/rotate_normalized_axis.inl
    nest-libs/macos/glm/include/glm/gtx/rotate_vector.hpp
    nest-libs/macos/glm/include/glm/gtx/rotate_vector.inl
    nest-libs/macos/glm/include/glm/gtx/scalar_multiplication.hpp
    nest-libs/macos/glm/include/glm/gtx/scalar_relational.hpp
    nest-libs/macos/glm/include/glm/gtx/scalar_relational.inl
    nest-libs/macos/glm/include/glm/gtx/spline.hpp
    nest-libs/macos/glm/include/glm/gtx/spline.inl
    nest-libs/macos/glm/include/glm/gtx/std_based_type.hpp
    nest-libs/macos/glm/include/glm/gtx/std_based_type.inl
    nest-libs/macos/glm/include/glm/gtx/string_cast.hpp
    nest-libs/macos/glm/include/glm/gtx/string_cast.inl
    nest-libs/macos/glm/include/glm/gtx/texture.hpp
    nest-libs/macos/glm/include/glm/gtx/texture.inl
    nest-libs/macos/glm/include/glm/gtx/transform.hpp
    nest-libs/macos/glm/include/glm/gtx/transform.inl
    nest-libs/macos/glm/include/glm/gtx/transform2.hpp
    nest-libs/macos/glm/include/glm/gtx/transform2.inl
    nest-libs/macos/glm/include/glm/gtx/type_aligned.hpp
    nest-libs/macos/glm/include/glm/gtx/type_aligned.inl
    nest-libs/macos/glm/include/glm/gtx/type_trait.hpp
    nest-libs/macos/glm/include/glm/gtx/type_trait.inl
    nest-libs/macos/glm/include/glm/gtx/vec_swizzle.hpp
    nest-libs/macos/glm/include/glm/gtx/vector_angle.hpp
    nest-libs/macos/glm/include/glm/gtx/vector_angle.inl
    nest-libs/macos/glm/include/glm/gtx/vector_query.hpp
    nest-libs/macos/glm/include/glm/gtx/vector_query.inl
    nest-libs/macos/glm/include/glm/gtx/wrap.hpp
    nest-libs/macos/glm/include/glm/gtx/wrap.inl
    nest-libs/macos/glm/include/glm/simd/common.h
    nest-libs/macos/glm/include/glm/simd/exponential.h
    nest-libs/macos/glm/include/glm/simd/geometric.h
    nest-libs/macos/glm/include/glm/simd/integer.h
    nest-libs/macos/glm/include/glm/simd/matrix.h
    nest-libs/macos/glm/include/glm/simd/neon.h
    nest-libs/macos/glm/include/glm/simd/packing.h
    nest-libs/macos/glm/include/glm/simd/platform.h
    nest-libs/macos/glm/include/glm/simd/trigonometric.h
    nest-libs/macos/glm/include/glm/simd/vector_relational.h
    nest-libs/macos/glm/include/glm/CMakeLists.txt
    nest-libs/macos/glm/include/glm/common.hpp
    nest-libs/macos/glm/include/glm/exponential.hpp
    nest-libs/macos/glm/include/glm/ext.hpp
    nest-libs/macos/glm/include/glm/fwd.hpp
    nest-libs/macos/glm/include/glm/geometric.hpp
    nest-libs/macos/glm/include/glm/glm.hpp
    nest-libs/macos/glm/include/glm/integer.hpp
    nest-libs/macos/glm/include/glm/mat2x2.hpp
    nest-libs/macos/glm/include/glm/mat2x3.hpp
    nest-libs/macos/glm/include/glm/mat2x4.hpp
    nest-libs/macos/glm/include/glm/mat3x2.hpp
    nest-libs/macos/glm/include/glm/mat3x3.hpp
    nest-libs/macos/glm/include/glm/mat3x4.hpp
    nest-libs/macos/glm/include/glm/mat4x2.hpp
    nest-libs/macos/glm/include/glm/mat4x3.hpp
    nest-libs/macos/glm/include/glm/mat4x4.hpp
    nest-libs/macos/glm/include/glm/matrix.hpp
    nest-libs/macos/glm/include/glm/packing.hpp
    nest-libs/macos/glm/include/glm/trigonometric.hpp
    nest-libs/macos/glm/include/glm/vec2.hpp
    nest-libs/macos/glm/include/glm/vec3.hpp
    nest-libs/macos/glm/include/glm/vec4.hpp
    nest-libs/macos/glm/include/glm/vector_relational.hpp
    nest-libs/macos/harfbuzz/dist/README-harfbuzz.txt
    nest-libs/macos/harfbuzz/include/hb-aat-layout.h
    nest-libs/macos/harfbuzz/include/hb-aat.h
    nest-libs/macos/harfbuzz/include/hb-blob.h
    nest-libs/macos/harfbuzz/include/hb-buffer.h
    nest-libs/macos/harfbuzz/include/hb-common.h
    nest-libs/macos/harfbuzz/include/hb-coretext.h
    nest-libs/macos/harfbuzz/include/hb-deprecated.h
    nest-libs/macos/harfbuzz/include/hb-directwrite.h
    nest-libs/macos/harfbuzz/include/hb-draw.h
    nest-libs/macos/harfbuzz/include/hb-face.h
    nest-libs/macos/harfbuzz/include/hb-font.h
    nest-libs/macos/harfbuzz/include/hb-ft.h
    nest-libs/macos/harfbuzz/include/hb-gdi.h
    nest-libs/macos/harfbuzz/include/hb-glib.h
    nest-libs/macos/harfbuzz/include/hb-gobject-structs.h
    nest-libs/macos/harfbuzz/include/hb-gobject.h
    nest-libs/macos/harfbuzz/include/hb-graphite2.h
    nest-libs/macos/harfbuzz/include/hb-icu.h
    nest-libs/macos/harfbuzz/include/hb-map.h
    nest-libs/macos/harfbuzz/include/hb-ot-color.h
    nest-libs/macos/harfbuzz/include/hb-ot-deprecated.h
    nest-libs/macos/harfbuzz/include/hb-ot-font.h
    nest-libs/macos/harfbuzz/include/hb-ot-layout.h
    nest-libs/macos/harfbuzz/include/hb-ot-math.h
    nest-libs/macos/harfbuzz/include/hb-ot-meta.h
    nest-libs/macos/harfbuzz/include/hb-ot-metrics.h
    nest-libs/macos/harfbuzz/include/hb-ot-name.h
    nest-libs/macos/harfbuzz/include/hb-ot-shape.h
    nest-libs/macos/harfbuzz/include/hb-ot-var.h
    nest-libs/macos/harfbuzz/include/hb-ot.h
    nest-libs/macos/harfbuzz/include/hb-set.h
    nest-libs/macos/harfbuzz/include/hb-shape-plan.h
    nest-libs/macos/harfbuzz/include/hb-shape.h
    nest-libs/macos/harfbuzz/include/hb-style.h
    nest-libs/macos/harfbuzz/include/hb-subset.h
    nest-libs/macos/harfbuzz/include/hb-unicode.h
    nest-libs/macos/harfbuzz/include/hb-uniscribe.h
    nest-libs/macos/harfbuzz/include/hb-version.h
    nest-libs/macos/harfbuzz/include/hb.h
    nest-libs/macos/harfbuzz/lib/libharfbuzz.a
    nest-libs/macos/libogg/dist/README-libogg.txt
    nest-libs/macos/libogg/include/ogg/config_types.h
    nest-libs/macos/libogg/include/ogg/ogg.h
    nest-libs/macos/libogg/include/ogg/os_types.h
    nest-libs/macos/libogg/include/ogg/os_types.h.before
    nest-libs/macos/libogg/lib/libogg.a
    nest-libs/macos/libopus/dist/README-libopus.txt
    nest-libs/macos/libopus/include/opus.h
    nest-libs/macos/libopus/include/opus_defines.h
    nest-libs/macos/libopus/include/opus_multistream.h
    nest-libs/macos/libopus/include/opus_projection.h
    nest-libs/macos/libopus/include/opus_types.h
    nest-libs/macos/libopus/lib/libopus.a
    nest-libs/macos/libopusenc/dist/README-libopusenc.txt
    nest-libs/macos/libopusenc/include/opusenc.h
    nest-libs/macos/libopusenc/lib/libopusenc.a
    nest-libs/macos/libpng/dist/README-libpng.txt
    nest-libs/macos/libpng/include/png.h
    nest-libs/macos/libpng/include/pngconf.h
    nest-libs/macos/libpng/include/pnglibconf.h
    nest-libs/macos/libpng/lib/libpng.a
    nest-libs/macos/libpng/lib/libpng16.a
    nest-libs/macos/opus-tools/bin/opusdec
    nest-libs/macos/opus-tools/bin/opusenc
    nest-libs/macos/opus-tools/bin/opusinfo
    nest-libs/macos/opusfile/dist/README-opusfile.txt
    nest-libs/macos/opusfile/include/opusfile.h
    nest-libs/macos/opusfile/lib/libopusfile.a
    nest-libs/macos/opusfile/lib/libopusurl.a
    nest-libs/macos/SDL2/bin/sdl2-config
    nest-libs/macos/SDL2/dist/README-SDL.txt
    nest-libs/macos/SDL2/include/SDL2/begin_code.h
    nest-libs/macos/SDL2/include/SDL2/close_code.h
    nest-libs/macos/SDL2/include/SDL2/SDL.h
    nest-libs/macos/SDL2/include/SDL2/SDL_assert.h
    nest-libs/macos/SDL2/include/SDL2/SDL_atomic.h
    nest-libs/macos/SDL2/include/SDL2/SDL_audio.h
    nest-libs/macos/SDL2/include/SDL2/SDL_bits.h
    nest-libs/macos/SDL2/include/SDL2/SDL_blendmode.h
    nest-libs/macos/SDL2/include/SDL2/SDL_clipboard.h
    nest-libs/macos/SDL2/include/SDL2/SDL_config.h
    nest-libs/macos/SDL2/include/SDL2/SDL_cpuinfo.h
    nest-libs/macos/SDL2/include/SDL2/SDL_egl.h
    nest-libs/macos/SDL2/include/SDL2/SDL_endian.h
    nest-libs/macos/SDL2/include/SDL2/SDL_error.h
    nest-libs/macos/SDL2/include/SDL2/SDL_events.h
    nest-libs/macos/SDL2/include/SDL2/SDL_filesystem.h
    nest-libs/macos/SDL2/include/SDL2/SDL_gamecontroller.h
    nest-libs/macos/SDL2/include/SDL2/SDL_gesture.h
    nest-libs/macos/SDL2/include/SDL2/SDL_haptic.h
    nest-libs/macos/SDL2/include/SDL2/SDL_hidapi.h
    nest-libs/macos/SDL2/include/SDL2/SDL_hints.h
    nest-libs/macos/SDL2/include/SDL2/SDL_joystick.h
    nest-libs/macos/SDL2/include/SDL2/SDL_keyboard.h
    nest-libs/macos/SDL2/include/SDL2/SDL_keycode.h
    nest-libs/macos/SDL2/include/SDL2/SDL_loadso.h
    nest-libs/macos/SDL2/include/SDL2/SDL_locale.h
    nest-libs/macos/SDL2/include/SDL2/SDL_log.h
    nest-libs/macos/SDL2/include/SDL2/SDL_main.h
    nest-libs/macos/SDL2/include/SDL2/SDL_messagebox.h
    nest-libs/macos/SDL2/include/SDL2/SDL_metal.h
    nest-libs/macos/SDL2/include/SDL2/SDL_misc.h
    nest-libs/macos/SDL2/include/SDL2/SDL_mouse.h
    nest-libs/macos/SDL2/include/SDL2/SDL_mutex.h
    nest-libs/macos/SDL2/include/SDL2/SDL_name.h
    nest-libs/macos/SDL2/include/SDL2/SDL_opengl.h
    nest-libs/macos/SDL2/include/SDL2/SDL_opengl_glext.h
    nest-libs/macos/SDL2/include/SDL2/SDL_opengles.h
    nest-libs/macos/SDL2/include/SDL2/SDL_opengles2.h
    nest-libs/macos/SDL2/include/SDL2/SDL_opengles2_gl2.h
    nest-libs/macos/SDL2/include/SDL2/SDL_opengles2_gl2ext.h
    nest-libs/macos/SDL2/include/SDL2/SDL_opengles2_gl2platform.h
    nest-libs/macos/SDL2/include/SDL2/SDL_opengles2_khrplatform.h
    nest-libs/macos/SDL2/include/SDL2/SDL_pixels.h
    nest-libs/macos/SDL2/include/SDL2/SDL_platform.h
    nest-libs/macos/SDL2/include/SDL2/SDL_power.h
    nest-libs/macos/SDL2/include/SDL2/SDL_quit.h
    nest-libs/macos/SDL2/include/SDL2/SDL_rect.h
    nest-libs/macos/SDL2/include/SDL2/SDL_render.h
    nest-libs/macos/SDL2/include/SDL2/SDL_revision.h
    nest-libs/macos/SDL2/include/SDL2/SDL_rwops.h
    nest-libs/macos/SDL2/include/SDL2/SDL_scancode.h
    nest-libs/macos/SDL2/include/SDL2/SDL_sensor.h
    nest-libs/macos/SDL2/include/SDL2/SDL_shape.h
    nest-libs/macos/SDL2/include/SDL2/SDL_stdinc.h
    nest-libs/macos/SDL2/include/SDL2/SDL_surface.h
    nest-libs/macos/SDL2/include/SDL2/SDL_system.h
    nest-libs/macos/SDL2/include/SDL2/SDL_syswm.h
    nest-libs/macos/SDL2/include/SDL2/SDL_test.h
    nest-libs/macos/SDL2/include/SDL2/SDL_test_assert.h
    nest-libs/macos/SDL2/include/SDL2/SDL_test_common.h
    nest-libs/macos/SDL2/include/SDL2/SDL_test_compare.h
    nest-libs/macos/SDL2/include/SDL2/SDL_test_crc32.h
    nest-libs/macos/SDL2/include/SDL2/SDL_test_font.h
    nest-libs/macos/SDL2/include/SDL2/SDL_test_fuzzer.h
    nest-libs/macos/SDL2/include/SDL2/SDL_test_harness.h
    nest-libs/macos/SDL2/include/SDL2/SDL_test_images.h
    nest-libs/macos/SDL2/include/SDL2/SDL_test_log.h
    nest-libs/macos/SDL2/include/SDL2/SDL_test_md5.h
    nest-libs/macos/SDL2/include/SDL2/SDL_test_memory.h
    nest-libs/macos/SDL2/include/SDL2/SDL_test_random.h
    nest-libs/macos/SDL2/include/SDL2/SDL_thread.h
    nest-libs/macos/SDL2/include/SDL2/SDL_timer.h
    nest-libs/macos/SDL2/include/SDL2/SDL_touch.h
    nest-libs/macos/SDL2/include/SDL2/SDL_types.h
    nest-libs/macos/SDL2/include/SDL2/SDL_version.h
    nest-libs/macos/SDL2/include/SDL2/SDL_video.h
    nest-libs/macos/SDL2/include/SDL2/SDL_vulkan.h
    nest-libs/macos/SDL2/lib/libSDL2.a
    nest-libs/macos/SDL2/lib/libSDL2main.a
    nest-libs/macos/zlib/include/zconf.h
    nest-libs/macos/zlib/include/zlib.h
    nest-libs/macos/zlib/lib/libz.a
    nest-libs/README.md
    src/geometry/halfedge-global.cpp
    src/geometry/halfedge-local.cpp
    src/geometry/halfedge-utility.cpp
    src/geometry/halfedge.h
    src/geometry/indexed.cpp
    src/geometry/indexed.h
    src/geometry/meshedit.cpp
    src/geometry/spline.cpp
    src/geometry/spline.h
    src/geometry/util.cpp
    src/geometry/util.h
    src/gui/animate.cpp
    src/gui/animate.h
    src/gui/manager.cpp
    src/gui/manager.h
    src/gui/model.cpp
    src/gui/model.h
    src/gui/modifiers.h
    src/gui/render.cpp
    src/gui/render.h
    src/gui/rig.cpp
    src/gui/rig.h
    src/gui/simulate.cpp
    src/gui/simulate.h
    src/gui/widgets.cpp
    src/gui/widgets.h
    src/lib/bbox.h
    src/lib/line.h
    src/lib/log.h
    src/lib/mat4.h
    src/lib/mathlib.h
    src/lib/plane.h
    src/lib/quat.h
    src/lib/ray.h
    src/lib/spectrum.h
    src/lib/vec2.h
    src/lib/vec3.h
    src/lib/vec4.h
    src/pathtracer/aggregate.h
    src/pathtracer/aperture_shape.cpp
    src/pathtracer/aperture_shape.h
    src/pathtracer/bvh.cpp
    src/pathtracer/bvh.h
    src/pathtracer/instance.h
    src/pathtracer/list.h
    src/pathtracer/pathtracer.cpp
    src/pathtracer/pathtracer.h
    src/pathtracer/samplers.cpp
    src/pathtracer/samplers.h
    src/pathtracer/trace.h
    src/pathtracer/tri_mesh.cpp
    src/pathtracer/tri_mesh.h
    src/platform/font.dat
    src/platform/gl.cpp
    src/platform/gl.h
    src/platform/icon.res
    src/platform/platform.cpp
    src/platform/platform.h
    src/platform/renderer.cpp
    src/platform/renderer.h
    src/rasterizer/framebuffer.cpp
    src/rasterizer/framebuffer.h
    src/rasterizer/pipeline.cpp
    src/rasterizer/pipeline.h
    src/rasterizer/programs.h
    src/rasterizer/rasterizer.cpp
    src/rasterizer/rasterizer.h
    src/rasterizer/sample_pattern.cpp
    src/rasterizer/sample_pattern.h
    src/scene/animator.cpp
    src/scene/animator.h
    src/scene/camera.cpp
    src/scene/camera.h
    src/scene/delta_light.cpp
    src/scene/delta_light.h
    src/scene/env_light.cpp
    src/scene/env_light.h
    src/scene/instance.h
    src/scene/introspect.h
    src/scene/io.cpp
    src/scene/io.h
    src/scene/load-save-json.cpp
    src/scene/load-save.cpp
    src/scene/material.cpp
    src/scene/material.h
    src/scene/particles.cpp
    src/scene/particles.h
    src/scene/scene-step.cpp
    src/scene/scene.cpp
    src/scene/scene.h
    src/scene/shape.cpp
    src/scene/shape.h
    src/scene/skeleton.cpp
    src/scene/skeleton.h
    src/scene/texture.cpp
    src/scene/texture.h
    src/scene/transform.cpp
    src/scene/transform.h
    src/scene/undo.cpp
    src/scene/undo.h
    src/util/hdr_image.cpp
    src/util/hdr_image.h
    src/util/rand.cpp
    src/util/rand.h
    src/util/thread_pool.cpp
    src/util/thread_pool.h
    src/util/timer.cpp
    src/util/timer.h
    src/util/to_json.cpp
    src/util/to_json.h
    src/util/viewer.cpp
    src/util/viewer.h
    src/app.cpp
    src/app.h
    src/main.cpp
    src/test.cpp
    src/test.h)
